Show nopendingrequest and minor fixes in home page

--- a/sbs/sbs_server_side/home/templates/record_home.html
+++ b/sbs/sbs_server_side/home/templates/record_home.html
@@ -51,9 +51,7 @@
                             <div class="input-group search-box">
 								<form>
 								 <input type="date" id="datepicker" class="form-control">							
-								<p style="text-align:center;">Search by Room number</p><input type="number" id="roomNumber" class="form-control" placeholder="Room number" ><p style="text-align: center;">Or<br>Search by time slot</p>
-								To:<input type="time" id="timeTo" class="form-control" placeholder="to" ><input type="time" id="timeFrom" class="form-control" placeholder="from" >
-								</form>
+								<p style="text-align:center;">Search by Room number</p><input type="number" id="roomNumber" class="form-control" placeholder="Room number" >
 								<span class="input-group-btn">
 									<button type="button" class="btn btn-primary"><i class="fa fa-search"></i></button>
 								</span>
