--- a/sbs/sbs_server_side/db/templates/login.html
+++ b/sbs/sbs_server_side/db/templates/login.html
@@ -5,7 +5,7 @@
 {% load static%}
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Login Page</title>
   <link href="{% static '/index.css' %}" rel="stylesheet" type="text/css">
   <!-- CSS only -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
@@ -23,30 +23,27 @@
     crossorigin="anonymous"></script>
 </head>
 
-<body>
-  <img src="{% static '/logo2.jpeg' %}">
-  <form action="{% url 'db:user_login'%}" method="post">
+<body style="background-color: rgb(220,220,220)">
+  <img src="{% static '/logo2.jpeg' %}" style="width:20%">
+  <form action="{% url 'db:user_login'%}" method="post" style="background-color:whitesmoke ; width:50%; margin-left: auto; margin-right: auto; border: 4px solid lightgray;">
    {% csrf_token %}
-    <h2><strong>Log-In</strong></h2>
+    <br>
     <div class="container">
       <span class="label label-info"><strong>Username</strong></span>
-      <input type="text" name="username" placeholder="xyz" required>
+      <input style="width:50%" type="text" name="username" placeholder="xyz" required >
       <br>
       <label for="password"><strong>Password</strong></label>
-      <input type="password" placeholder="****" name="password" required>
+      <input style="width:50%" type="password" placeholder="****" name="password" required >
       <br>
-      <input class="btn btn-primary" type="submit" value="Login">
+      <input class="btn btn-success" type="submit" value="Login">
       <div class="custom-control custom-checkbox">
         <input type="checkbox" class="custom-control-input" id="defaultChecked2" checked>
         <label class="custom-control-label" for="defaultChecked2">Remember me!</label>
       </div>
 
-      <div>
-        <span class="password">Forgot <a href="#">password?</a></span>
-      </div>
       <footer>
-        <br><br><br>
-        <div class="footer-copyright text-center py-3">For more information contact:<br>mananshi.v@ahduni.edu.in<br>bhavya.p@ahduni.edu.in
+        <br>
+        <div class="footer-copyright text-center py-3" style="color: seagreen;">For more information contact:<br><a style="color: seagreen;font-size: small;" href="https://mail.google.com/mail/?view=cm&fs=1&to=mananshi.v@ahduni.edu.in">mananshi.v@ahduni.edu.in</a><br><a style="color: seagreen; font-size:small;" href="https://mail.google.com/mail/?view=cm&fs=1&to=bhavya.p@ahduni.edu.in">bhavya.p@ahduni.edu.in</a>
         </div>
 
       </footer>
